apps/base/oura-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oura-dashboard
  namespace: oura-dashboard
spec:
  selector:
    app: oura-dashboard
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: health
  type: ClusterIP
