apps/base/oura-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oura-dashboard
  namespace: oura-dashboard
spec:
  ingressClassName: traefik
  rules:
  - host: oura-health.landryzetam.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - oura-health.landryzetam.net
    secretName: wildcard-landryzetam-net-tls
